FIX LONG TAG NAMES AND WORD WRAPPING OF LONG TEXTS
Tags and messages were not wrapping and were breaking the layout, this commit
wraps the message and the tags wherever they show up.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,3 +40,7 @@ div.vertical-space {
     min-height: 568px;
     background-color: #fff;
 }
+
+.modal-message {
+	word-wrap: break-word;
+}
